--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>BookTrackr</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Book Trackr</title>
 </head>
-<body class="bg-gray-100 text-gray-900">
-  <!-- Navbar component will be rendered via JS -->
-  <div id="app" class="max-w-6xl mx-auto p-4"></div>
-
-  <script type="module" src="/src/main.js"></script>
+<body class="bg-gray-100 min-h-screen">
+  <div id="app"></div>
+  <script type="module" src="./src/main.js" defer></script>
 </body>
 </html>
